<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.LoginActivity">

    <TextView
        android:id="@+id/useless_login_for_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/no236"
        android:gravity="center_horizontal"
        android:text="@string/login_for_continue"
        android:textColor="@color/orange_brown"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/useless_login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/useless_login_for_continue">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:orientation="vertical">
            <!-- 一个TextInputLayout只能包裹一个TextInputEditText -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/inputHintStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_et_username"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/text_input_background"
                    android:hint="@string/username_input_hint"
                    android:inputType="textCapWords"
                    android:maxLength="20"
                    android:text="@={LoginPageEventHandler.username}"
                    android:maxLines="1"
                    android:textColorHint="@color/orange_brown_hint"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/inputHintStyle"
                app:layout_constraintTop_toBottomOf="@id/login_layout_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/text_input_background"
                    android:hint="@string/password_input_hint"
                    android:text="@={LoginPageEventHandler.password}"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:textColorHint="@color/orange_brown_hint"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/no236"
                android:stateListAnimator="@null"
                android:text="@string/login"
                android:textColor="@color/orange_brown"
                android:textSize="25sp"
                app:backgroundTint="@color/button_login_background_3C"
                app:cornerRadius="10dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/button_sign_up_background"
                android:fontFamily="@font/no236"
                android:stateListAnimator="@null"
                android:text="@string/sign_up"
                android:textColor="@color/orange_brown"
                android:textSize="25sp"
                app:cornerRadius="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </com.google.android.material.card.MaterialCardView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/page_splash"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/no236"
            android:gravity="center"
            android:text="@string/author"
            android:textColor="@color/orange_brown"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/page_splash"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/no236"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="@color/orange_brown"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>