<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- 一个TextInputLayout只能包裹一个TextInputEditText -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_project_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/inputHintStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_project_et_project_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/text_input_background"
                    android:hint="@string/projects_project_name"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColorHint="@color/orange_brown_hint"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_project_project_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/inputHintStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_project_et_project_description"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/text_input_background"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textColorHint="@color/orange_brown_hint"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_project_btn_create"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/no236"
                android:stateListAnimator="@null"
                android:text="@string/project_create"
                android:textColor="@color/orange_brown"
                android:textSize="25sp"
                app:backgroundTint="@color/button_login_background_3C"
                app:cornerRadius="10dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
